src/styles/global.css
:root {
  --black: #211f1e;
  --white: #ffffff;
  --white-alt: #e4d8de;
  --primary: #a71d5d;
  --primary-alt: #7d063d;
}

* {
  box-sizing: border-box;
}

html,
.root {
  font-size: 21px;
}

body {
  background-color: var(--black);
  color: var(--white);
  font-family: 'Quattrocento Sans', sans-serif;
  font-size: 1em;
  margin-bottom: 75px;
}

a {
  color: var(--primary);
  text-decoration: none;
  font-weight: 700;
}
a:hover {
  color: var(--primary-alt);
}

cite {
  display: block;
  font-style: normal;
  margin-bottom: 1.618em;
  text-align: left;
}

cite > p {
  margin: 0;
}

cite > p:first-child {
  color: var(--white);
  font-weight: 700;
  margin-bottom: 6px;
}

blockquote {
  font-family: 'Quattrocento', serif;
  font-size: 1em;
  font-weight: 400;
  line-height: 1.58em;
  margin: 0.79310345em 0 0.79310345em 0;
}

blockquote > p {
  margin: 0 0 0.79310345em 0;
}

blockquote > div {
  margin: 0;
}

.container {
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: flex-start;
  max-width: 700px;
  width: 96%;
  margin: 0 auto;
  padding-top: 1em;
}

.quotemark-l {
  color: var(--primary);
  font-size: 100px;
  text-align: center;
  line-height: 1;
}

nav {
  background-color: var(--black);
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  position: fixed;
  width: 100%;
  height: 75px;
  bottom: 0;
  border-top: 1px var(--white-alt) solid;
  align-items: center;
  justify-content: center;
  transition: height 0.25s linear;
}

nav.open {
  height: 90vh;
  overflow-y: scroll;
  padding-top: 1rem;
}

nav.open ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  height: 100%;
}

nav.open ul li {
  margin-bottom: 0.333rem;
}

.quotee-select-button {
  font-size: 0.777rem;
  white-space: nowrap;
}

.close-button {
  position: absolute;
  top: 0.333rem;
  left: 0.333rem;
  font-size: 1.777rem;
}

.playlist-button {
  font-size: 0.777em;
  text-align: center;
  white-space: nowrap;
  padding: 0;
  margin: 0 1rem;
}

button {
  font-weight: bold;
  background-color: transparent;
  cursor: pointer;
  color: var(--white);
  border: none;
}

button:hover {
  color: var(--white-alt);
}

p.jumbo {
  font-size: 1.777rem;
  text-align: center;
}

.backward {
  display: inline-block;
  width: 0;
  height: 0;
  border-top: 20px solid transparent;
  border-right: 40px solid var(--white);
  border-bottom: 20px solid transparent;
}

.backward:hover {
  border-right-color: var(--white-alt);
}

.forward {
  display: inline-block;
  width: 0;
  height: 0;
  border-top: 20px solid transparent;
  border-left: 40px solid var(--white);
  border-bottom: 20px solid transparent;
}

.forward:hover {
  border-left-color: var(--white-alt);
}

.backward:hover,
.forward:hover {
  cursor: pointer;
}

.backward.disabled {
  border-right: 40px solid rgba(255, 255, 255, 0.5);
  cursor: default;
}

.forward.disabled {
  border-left: 40px solid rgba(255, 255, 255, 0.5);
  cursor: default;
}

